--- a/cat-jjal-maker-cra/package.json
+++ b/cat-jjal-maker-cra/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://sooboi.github.io/cat-jjal-maker",
   "name": "cat-jjal-maker-cra",
   "version": "0.1.0",
   "private": true,
@@ -6,16 +7,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
